# FullStackEngineerChallenge

./: ASSUMPTIONS.md  INSTALLATION.md  OVERVIEW.md
backend/: .gitignore  Cargo.toml
backend/src/: lib.rs  main.rs  routes.rs
backend/src/db/: mod.rs
frontend/: INSTALLATION.md  package.json
frontend/src/: App.tsx
frontend/src/pages/admin/: AddEmployeeForm.tsx  AddReviewForm.tsx  DeleteEmployeeButton.tsx  Employees.tsx  Reviews.tsx
